<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="permissions_notice_msg">权限提示</string>
    <string name="agreement_msg">温馨提示</string>
    <string name="agreement_exit_msg">本产品需要同意相关协议后才能使用哦。</string>
    <string name="exit_msg">退出应用</string>
    <string name="know_msg">我知道了</string>
    <string name="agree_msg">同意</string>
    <string name="agree_and_go_on_msg">同意并继续</string>
    <string name="refuse_msg">不同意</string>
    <string name="notifaction_open_msg">开启</string>
    <string name="cancle_msg">取消</string>
    <string name="notifaction_part1">请在列表中找到"</string>
    <string name="notifaction_part2">"，并打开开关</string>
    <string name="permissions_reason_msg_part1">为了给您提供更好的服务，</string>
    <string name="permissions_reason_msg_part2">需要向您申请以下权限：</string>
</resources>