<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/global_outside_bg"
    android:orientation="vertical"
    android:paddingLeft="35dp"
    android:paddingRight="35dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center_vertical"
        android:text="@string/agreement_msg"
        android:textColor="#222222"
        android:textSize="19dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="#222222"
        android:textSize="14dp"
        android:text="@string/agreement_exit_msg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="26dp">

        <TextView
            android:id="@+id/x_agreement_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/x_gray_button_bg"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/exit_msg"
            android:textColor="#222222"
            android:textSize="14dp"
            android:textStyle="bold" />

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/x_agreement_know"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/x_purple_button_bg"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/know_msg"
            android:textColor="#008EFF"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>